--- a/course-materials/keys/KEY-distributions.qmd
+++ b/course-materials/keys/KEY-distributions.qmd
@@ -177,18 +177,18 @@ missing_temps <- naniar::vis_miss(bottom)
 #| message: false
 #| layout-ncol: 2
 
-# create some dummy data ----
+#.....................create some dummy data.....................
 dummy_data <- data.frame(value = c(rnorm(n = 100, mean = 5),
                                    rnorm(n = 200, mean = 10)),
                          group = rep(c("A", "B"),
                                      times = c(100, 200)))
 
-# histogram ----
+#............................histogram...........................
 ggplot(dummy_data, aes(x = value, fill = group)) +
   geom_histogram(position = "identity", alpha = 0.7) +
   geom_rug(aes(color = group), alpha = 0.75)
 
-# density plot ----
+#..........................density plot..........................
 ggplot(dummy_data, aes(x = value, fill = group)) +
   geom_density(alpha = 0.7) +
   geom_rug(aes(color = group), alpha = 0.75)
@@ -203,13 +203,13 @@ ggplot(dummy_data, aes(x = value, fill = group)) +
 #| message: false
 #| layout-ncol: 2
 
-# histogram with all 12 months ----
+#..................histogram with all 12 months..................
 mko_clean |> 
   mutate(month_name = factor(month_name, levels = month.name)) |> 
   ggplot(aes(x = Temp_bot, fill = month_name)) +
   geom_histogram(position = "identity", alpha = 0.5)
 
-# density plot with all 12 months ----
+#................density plot with all 12 months.................
 mko_clean |> 
   mutate(month_name = factor(x = month_name, levels = month.name)) |> 
   ggplot(aes(x = Temp_bot, fill = month_name)) +
@@ -225,14 +225,14 @@ mko_clean |>
 #| message: false
 #| layout-ncol: 2
 
-# histogram faceted by month ----
+#...................histogram faceted by month...................
 mko_clean |> 
   mutate(month_name = factor(month_name, levels = month.name)) |> 
   ggplot(aes(x = Temp_bot)) +
   geom_histogram() +
   facet_wrap(~month_name)
 
-# density plot faceted by month ----
+#..................density plot faceted by month.................
 mko_clean |> 
   mutate(month_name = factor(month_name, levels = month.name)) |> 
   ggplot(aes(x = Temp_bot)) +
@@ -250,7 +250,7 @@ mko_clean |>
 #| warning: false
 #| layout-ncol: 2
 
-# histogram with fewer months ----
+#..................histogram with fewer months...................
 mko_clean |> 
   mutate(month_name = factor(month_name, levels = month.name)) |> 
   filter(month_name %in% c("April", "June", "October")) |> 
@@ -258,7 +258,7 @@ mko_clean |>
   geom_histogram(position = "identity", alpha = 0.5, color = "black", binwidth = 1) +
   scale_fill_manual(values = c("#2C5374", "#ADD8E6", "#8B3A3A"))
 
-# density plot with fewer months ----
+#.................density plot with fewer months.................
 mko_clean |> 
   filter(month_name %in% c("April", "June", "October")) |> 
   ggplot(aes(x = Temp_bot, fill = month_name)) +
@@ -281,7 +281,7 @@ Why are the months in our density plot still in chronological order, despite not
 #| warning: false
 #| layout-ncol: 2
 
-# histogram with fewer months ----
+#...............histogram with modified bin widths...............
 mko_clean |> 
   filter(month_name %in% c("April", "June", "October")) |> 
   mutate(month_name = factor(month_name, levels = month.name)) |> 
@@ -289,7 +289,7 @@ mko_clean |>
   geom_histogram(position = "identity", alpha = 0.5, binwidth = 1) +
   scale_fill_manual(values = c("#2C5374", "#ADD8E6", "#8B3A3A"))
 
-# density plot with fewer months ----
+#..............density plot with modified bin widths.............
 mko_clean |> 
   filter(month_name %in% c("April", "June", "October")) |> 
   ggplot(aes(x = Temp_bot, fill = month_name)) +
@@ -310,7 +310,7 @@ What should you carefully consider when checking the smoothing asumptions of you
 #| warning: false
 #| message: false
 
-# overlay histogram & density ----
+#..................overlay histogram & density...................
 ggplot(mko_clean, aes(x = Temp_bot, y = after_stat(density))) + # scale down hist to match density curve
   geom_histogram(fill = "gray", color = "black", alpha = 0.75) +
   geom_density(linewidth = 1) 
@@ -327,13 +327,13 @@ ggplot(mko_clean, aes(x = Temp_bot, y = after_stat(density))) + # scale down his
 #| message: false
 #| layout-ncol: 2
 
-# basic ridgeline plot ----
+#......................basic ridgeline plot......................
 mko_clean |> 
   mutate(month_name = factor(month_name, levels = rev(month.name))) |> # alt, within ggplot: `scale_y_discrete(limits = rev(month.name))`
   ggplot(aes(x = Temp_bot, y = month_name)) +
   ggridges::geom_density_ridges(rel_min_height = 0.01, scale = 3)  # `rel_min_height` sets threshold for relative height of density curves (any values below threshold treated as 0); `scale` controls extent to which different densities overlap
 
-# fill with color gradient ----
+#....................fill with color gradient....................
 mko_clean |> 
   mutate(month_name = factor(month_name, levels = rev(month.name))) |> 
   ggplot(aes(x = Temp_bot, y = month_name, fill = after_stat(x))) + # `fill = after_stat(x)` tells ggplot to compute the `x` values (representing `Temp_bot`) after the statistical transformation (density estimation) and map those computed `x` values to the `fill` aesthetic. As a result, the gradient fill of each density curve will reflect the temperature values along the x-axis.
@@ -350,7 +350,7 @@ mko_clean |>
 #| echo: true
 #| warning: false
 
-# boxplot with all 12 months ----
+#...................boxplot with all 12 months...................
 ggplot(mko_clean, aes(x = month_name, y = Temp_bot)) +
   geom_boxplot() +
   scale_x_discrete(limits = rev(month.name)) + # an alt way to reorder groups within ggplot, rather than during data wrangling
@@ -369,7 +369,7 @@ What are the tradeoffs between reordering groups within a ggplot (as above) vs. 
 #| echo: true
 #| warning: false
 
-# highlight a particular group ----
+#..................highlight a particular group..................
 ggplot(mko_clean, aes(x = month_name, y = Temp_bot, fill = month_name)) +
   geom_boxplot() +
   scale_x_discrete(limits = rev(month.name)) +
@@ -385,14 +385,14 @@ ggplot(mko_clean, aes(x = month_name, y = Temp_bot, fill = month_name)) +
 #| echo: true
 #| warning: false
 
-# does not work if you have too many observations ----
+#........does not work if you have too many observations.........
 ggplot(mko_clean, aes(x = month_name, y = Temp_bot)) +
   geom_boxplot(outlier.shape = NA) + # remember to remove outliers!
   geom_jitter(alpha = 0.5, width = 0.2) +
   scale_x_discrete(limits = rev(month.name)) + # an alt way to reorder groups within ggplot, rather than during data wrangling
   coord_flip()
 
-# but great when you have fewer observations ----
+#...........but great when you have fewer observations...........
 ggplot(penguins, aes(x = species, y = body_mass_g)) +
   geom_boxplot(outlier.shape = NA) + # remember to remove outliers!
   geom_jitter(alpha = 0.5, width = 0.2) 
@@ -405,7 +405,7 @@ ggplot(penguins, aes(x = species, y = body_mass_g)) +
 #| echo: true
 #| warning: false
 
-# boxplot + beeswarm ----
+#.......................boxplot + beeswarm.......................
 ggplot(penguins, aes(x = species, y = body_mass_g)) +
   geom_boxplot(outlier.shape = NA) + # remember to remove outliers!
   ggbeeswarm::geom_beeswarm(size = 1) 
@@ -418,7 +418,7 @@ ggplot(penguins, aes(x = species, y = body_mass_g)) +
 #| echo: true
 #| warning: false
 
-# dodge groups by year ----
+#......................dodge groups by year......................
 ggplot(penguins, aes(x = species, y = body_mass_g, color = as.factor(year))) +
   geom_boxplot(outlier.shape = NA) + # remember to remove outliers!
   geom_point(alpha = 0.5, 
@@ -435,7 +435,7 @@ ggplot(penguins, aes(x = species, y = body_mass_g, color = as.factor(year))) +
 #| echo: true
 #| warning: false
 
-# violin + box plot ----
+#........................violin + box plot.......................
 ggplot(mko_clean, aes(x = month_name, y = Temp_bot)) +
   geom_violin() +
   geom_boxplot(width = 0.1, fill = "gray", color = "gray30", alpha = 0.5) +
